--- a/app/src/main/res/layout/activity_view_bill.xml
+++ b/app/src/main/res/layout/activity_view_bill.xml
@@ -28,7 +28,6 @@
             android:layout_below="@+id/appbAR">
     <RelativeLayout
         android:layout_width="match_parent"
-
         android:layout_height="match_parent"
         android:padding="5dp">
 
@@ -44,23 +43,32 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/linearLayout"
-            android:text="@string/address"
+            android:text="@string/bill_details"
             android:textColor="@color/fontColor"
+            android:textStyle="bold"
+            android:paddingBottom="4dp"
             android:textSize="18sp" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/rounded_corner"
-        android:id="@+id/tv_address_area"
-        android:padding="5dp"
-        android:text="@string/inputAddress"
-        />
+
+        <include layout="@layout/bill_detail"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:id="@+id/payment"
+            android:layout_below="@+id/linearLayout3"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 </LinearLayout>
+        <include layout="@layout/promo_code"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:id="@+id/payment"
+            android:layout_below="@+id/linearLayout3"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
     <include layout="@layout/bill_details"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:id="@+id/includes"
-        android:layout_below="@+id/linearLayout3"
+        android:layout_below="@+id/payment"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
