--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_size">24sp</dimen>
     <dimen name="text_size_small">16sp</dimen>
+    <dimen name="header_font">18sp</dimen>
 </resources>
