--- a/app/src/main/res/layout/activity_payment_confirmation.xml
+++ b/app/src/main/res/layout/activity_payment_confirmation.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/toolbars"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
@@ -51,28 +51,18 @@
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/tv_confiramtion_msg"
                 android:text="@string/order_summary"
-                android:paddingBottom="3dp"
                 android:textStyle="bold"
-                android:textSize="@dimen/text_size_small"
+                android:textSize="16sp"
+                android:paddingBottom="5dp"
                 android:textColor="@color/fontColor" />
 
             <include
-                layout="@layout/booking_history_activity"
+                layout="@layout/booking_table_items"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true" />
-
-            <include
-                android:layout_marginTop="5dp"
-                android:id="@+id/ic_bill_details"
-                layout="@layout/bill_details"
-                android:layout_height="449dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/tv_order_Summery" />
         </LinearLayout>
-    </ScrollView>
-</LinearLayout>
-
+        </ScrollView>
+    </LinearLayout>
