--- a/app/src/main/res/layout/activity_view_cart.xml
+++ b/app/src/main/res/layout/activity_view_cart.xml
@@ -13,7 +13,7 @@
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
-            android:layout_width="390dp"
+            android:layout_width="match_parent"
             android:layout_gravity="center_horizontal"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
@@ -25,14 +25,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/appbAR"
-        android:padding="5dp">
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:paddingTop="5dp">
 
         <TextView
             android:id="@+id/price_summary"
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:padding="5dp"
-
+            android:gravity="left|bottom"
+            android:paddingBottom="3dp"
             android:text="@string/price_summary"
             android:textColor="@color/fontColor"
             android:textSize="18sp"
@@ -42,9 +44,11 @@
             android:id="@+id/relative_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/price_summary"
             android:background="@drawable/payment_background"
-            android:padding="5dp">
+            android:padding="5dp"
+            android:layout_below="@+id/price_summary"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
 
             <TextView
                 android:id="@+id/tv_items"
@@ -53,7 +57,11 @@
                 android:layout_marginBottom="3dp"
                 android:text="@string/items"
                 android:textColor="@color/fontColor"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:layout_alignRight="@+id/tv_estimated"
+                android:layout_alignEnd="@+id/tv_estimated"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
 
             <TextView
                 android:id="@+id/tv_chargrss"
@@ -63,16 +71,35 @@
                 android:layout_marginBottom="10dp"
                 android:text="@string/charges"
                 android:textColor="@color/fontColor"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:layout_alignRight="@+id/tv_items"
+                android:layout_alignEnd="@+id/tv_items"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
 
             <TextView
                 android:id="@+id/tv_estimated"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/tv_chargrss"
-                android:layout_marginBottom="10dp"
                 android:text="@string/estimated_total"
                 android:textColor="@color/fontColor"
+                android:textSize="15sp"
+                android:layout_marginBottom="15dp"
+                android:textStyle="bold"
+                android:layout_below="@+id/tv_chargrss"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <TextView
+                android:id="@+id/tableNo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/et_table_no"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/tv_estimated"
+                android:gravity="left|center"
+                android:text="Enter Table No  "
                 android:textSize="15sp"
                 android:textStyle="bold" />
 
@@ -82,7 +109,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_marginBottom="3dp"
-                android:text="$200"
+                android:text="$ 200"
                 android:textColor="@color/fontColor"
                 android:textSize="15sp" />
 
@@ -93,7 +120,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_below="@+id/tv_items_price"
                 android:layout_marginBottom="10dp"
-                android:text="$200"
+                android:text="$ 200"
                 android:textColor="@color/fontColor"
                 android:textSize="15sp" />
 
@@ -103,31 +130,52 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_below="@+id/tv_charger_price"
-                android:text="$200"
-                android:textColor="@color/fontColor"
+                android:text="$ 200"
+                android:textColor="@android:color/holo_red_light"
                 android:textSize="15sp" />
 
+
             <TextView
+                android:id="@+id/tv_place_order"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_below="@+id/tv_estimated_price"
+                android:layout_height="50dp"
+                android:layout_below="@+id/tableNo"
                 android:layout_marginBottom="5dp"
                 android:layout_marginTop="15dp"
                 android:background="@drawable/button_background"
                 android:gravity="center"
-                android:text="@string/proceed"
+                android:text="@string/place_order"
                 android:textAlignment="center"
                 android:textColor="@android:color/white"
-                android:textSize="18sp" />
+                android:textSize="24sp" />
+
+            <EditText
+                android:id="@+id/et_table_no"
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_below="@+id/tv_estimated"
+                android:background="@drawable/payment_background"
+                android:inputType="number"
+                android:gravity="center"
+                android:maxLength="5"
+                android:imeOptions="actionDone"
+                android:padding="4dp"
+                android:textCursorDrawable="@drawable/custom_edit_text_cursor">
+
+                <requestFocus />
+            </EditText>
+
         </RelativeLayout>
 
         <TextView
             android:id="@+id/item_summary"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="30dp"
+            android:gravity="left|bottom"
             android:layout_below="@+id/relative_layout"
-            android:gravity="bottom"
-            android:padding="5dp"
+            android:paddingBottom="3dp"
             android:text="@string/item_summary"
             android:textColor="@color/fontColor"
             android:textSize="18sp"
@@ -138,7 +186,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/item_summary"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="6dp"
             android:background="@drawable/payment_background"
             android:padding="5dp" />
     </RelativeLayout>
