--- a/app/src/main/res/layout/bill_details.xml
+++ b/app/src/main/res/layout/bill_details.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,10 +8,11 @@
         android:id="@+id/tv_bill_table"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
+        android:layout_marginTop="10dp"
         android:text="@string/bill_details"
         android:textColor="@color/fontColor"
-        android:textSize="15sp"
+        android:textSize="@dimen/header_font"
+        android:paddingBottom="5dp"
         android:textStyle="bold" />
 
 
@@ -30,20 +30,20 @@
             android:id="@+id/lv_items_list"
             android:layout_width="match_parent"
             android:layout_height="100dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
             android:divider="@null"
-            android:nestedScrollingEnabled="true"
-            android:layout_marginBottom="10dp" />
+            android:nestedScrollingEnabled="true" />
 
         <TextView
             android:id="@+id/tv_discount"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="33dp"
             android:layout_below="@+id/lv_items_list"
-            android:padding="5dp"
+            android:padding="7dp"
             android:text="@string/discount"
             android:textColor="@color/fontColor"
-            android:textSize="15sp"
-            android:textStyle="bold" />
+            android:textSize="15sp" />
 
         <TextView
             android:id="@+id/tv_discount_price_bill"
@@ -54,7 +54,7 @@
             android:layout_alignParentRight="true"
             android:layout_below="@+id/lv_items_list"
             android:padding="5dp"
-            android:text="$0.0"
+            android:text="-$ 0.0"
             android:textStyle="bold" />
 
         <View
@@ -69,26 +69,27 @@
             android:id="@+id/lv_tax_menu"
             android:layout_width="match_parent"
             android:layout_height="120dp"
-            android:dividerHeight="0dp"
+            android:layout_below="@+id/line2"
             android:divider="@null"
-            android:nestedScrollingEnabled="true"
-            android:layout_below="@+id/line2" />
+            android:dividerHeight="0dp"
+            android:nestedScrollingEnabled="true" />
 
         <View
             android:id="@+id/line3"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_below="@+id/lv_tax_menu"
-            android:layout_marginBottom="5dp"
             android:background="@color/fontColor" />
 
         <TextView
             android:id="@+id/tv_order_total"
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/line3"
-            android:padding="5dp"
+            android:gravity="center"
+            android:padding="7dp"
             android:text="@string/order_total"
+
             android:textColor="@color/fontColor"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -96,12 +97,14 @@
         <TextView
             android:id="@+id/tv_total_price"
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/line3"
-            android:padding="5dp"
+            android:gravity="center"
+            android:padding="7dp"
             android:text="$20.00"
+            android:textColor="@android:color/holo_red_light"
             android:textStyle="bold" />
 
     </RelativeLayout>
