--- a/app/src/main/res/layout/booking_history_activity.xml
+++ b/app/src/main/res/layout/booking_history_activity.xml
@@ -33,11 +33,11 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/titel_na"
-        android:padding="5dp">
+        android:padding="7dp">
 
         <TextView
             android:id="@+id/Date"
-
+            android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
@@ -47,6 +47,7 @@
 
         <TextView
             android:id="@+id/tv_data_time"
+android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/tv_rest_name"
@@ -74,7 +75,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/rest.name"
-            android:text="Booking ID" />
+            android:text="Order ID" />
 
         <TextView
             android:id="@+id/desctiption"
@@ -113,7 +114,7 @@
             android:layout_alignEnd="@+id/desctiption"
             android:layout_alignRight="@+id/desctiption"
             android:layout_below="@+id/quantity"
-            android:text="Order total" />
+            android:text="Amount" />
 
         <TextView
             android:id="@+id/tv_rest_name"
@@ -167,7 +168,8 @@
             android:layout_alignParentRight="true"
             android:layout_below="@+id/tv_order_total"
             android:layout_toRightOf="@+id/order_status"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_quantitys"
@@ -196,7 +198,10 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/order_status"
-            android:text="Status" />
+            android:text="Status"
+            android:textStyle="bold"
+            android:layout_toLeftOf="@+id/tv_order_status"
+            android:layout_toStartOf="@+id/tv_order_status" />
     </RelativeLayout>
 
 </RelativeLayout>
