--- a/app/src/main/res/layout/content_menu.xml
+++ b/app/src/main/res/layout/content_menu.xml
@@ -8,8 +8,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.effone.hostismeandroid.activity.MenuActivity"
     tools:showIn="@layout/activity_menu"
-    android:paddingLeft="5dp"
-    android:paddingRight="5dp">
+   >
 
 
     <TextView
@@ -19,6 +18,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:gravity="center"
+        android:padding="5dp"
       android:textAlignment="center"
         android:text="@string/dinner"
         android:textSize="24sp" />
@@ -43,24 +43,25 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/dinner"
-            android:text="20 Items in Cart\n $ 200.00\nPlus charges"
+            android:text="20 Items in Cart\n$ 200.00\nPlus charges"
             android:textColor="@android:color/white"
             android:drawableLeft="@drawable/cart"
             android:drawablePadding="5dp"
-            android:padding="5dp"
+            android:paddingLeft="5dp"
+            android:paddingTop="5dp"
             android:drawableTint="@android:color/white"
-            android:textSize="12dp" />
+            android:textSize="11dp" />
 
         <TextView
             android:id="@+id/tv_confirm"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:textColor="@android:color/white"
             android:layout_weight="1"
-            android:textSize="18sp"
             android:background="@color/confirm"
-            android:text="View Cart" />
+            android:gravity="center"
+            android:text="View Cart"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="24sp" />
     </LinearLayout>
 </LinearLayout>
