--- a/app/src/main/res/layout/content_restaurant_list_acitivity.xml
+++ b/app/src/main/res/layout/content_restaurant_list_acitivity.xml
@@ -9,8 +9,8 @@
     tools:showIn="@layout/activity_restaurant_list_acitivity">
     <ListView
         android:id="@+id/restaurantList"
-        android:layout_width="368dp"
-        android:layout_height="495dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         tools:layout_editor_absoluteY="8dp"
         tools:layout_editor_absoluteX="8dp">
 
