--- a/app/src/main/res/layout/order_summary_items.xml
+++ b/app/src/main/res/layout/order_summary_items.xml
@@ -1,42 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="5dp">
 
     <TextView
         android:id="@+id/tv_item_price_quantity"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:text="TextView"
-        android:padding="2dp"
-        android:gravity="center"
-        android:textAlignment="textStart"
-        android:layout_below="@+id/tv_item_name"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/tv_item_name"
+        android:layout_toLeftOf="@+id/tv_item_price"
+        android:layout_toStartOf="@+id/tv_item_price"
+        android:gravity="center"
+        android:padding="2dp"
+        android:text="TextView"
+        android:textAlignment="textStart" />
 
     <TextView
         android:id="@+id/tv_item_name"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:text="TextView"
-        android:padding="2dp"
-        android:gravity="center"
-        android:textAlignment="textStart"
-        android:layout_alignParentTop="true"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:gravity="center"
+        android:padding="2dp"
+        android:text="TextView"
+        android:textAlignment="textStart" />
 
     <TextView
         android:id="@+id/tv_item_price"
         android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/tv_item_price_quantity"
+        android:layout_height="25dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:gravity="right"
         android:padding="5dp"
         android:text="TextView"
-        android:textAlignment="viewEnd" />
+        android:textAlignment="viewEnd"
+        android:layout_alignBottom="@+id/tv_item_price_quantity" />
 </RelativeLayout>
