--- a/app/src/main/res/layout/summery_list_item.xml
+++ b/app/src/main/res/layout/summery_list_item.xml
@@ -13,7 +13,9 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:text="fjdksjfj" />
+        android:text="fjdksjfj"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tv_item_total_price"
@@ -22,7 +24,9 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:text="sdsajdj" />
+        android:text="sdsajdj"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/charges_heading"
@@ -31,7 +35,9 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/tv_summery_item_name"
-        android:text="Charges" />
+        android:text="Charges"
+        android:textSize="14sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tv_service_charges"
@@ -40,7 +46,9 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/charges_heading"
-        android:text="Service Charge" />
+        android:text="Serv. Charge"
+        android:layout_marginLeft="5dp"
+        android:textSize="12sp" />
 
     <TextView
         android:id="@+id/tv_vat"
@@ -49,7 +57,9 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/tv_service_charges"
-        android:text="VAT" />
+        android:text="VAT. Tax"
+        android:layout_marginLeft="5dp"
+        android:textSize="12sp" />
 
     <TextView
         android:id="@+id/tv_vat_value"
@@ -58,14 +68,19 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/tv_service_charges"
-        android:text="$ 3.6" />
+        android:text="$ 3.6"
+        android:textSize="12sp"
+        android:layout_alignLeft="@+id/tv_service_charges_value"
+        android:layout_alignStart="@+id/tv_service_charges_value" />
 
     <TextView
         android:id="@+id/tv_service_tax"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_vat"
-        android:text="Service Tax" />
+        android:text="Serv. Tax"
+        android:layout_marginLeft="5dp"
+        android:textSize="12sp" />
 
     <TextView
         android:id="@+id/tv_total"
@@ -73,13 +88,20 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/tv_service_tax_value"
-        android:text="$ 120.00" />
+        android:text="$ 120.00"
+        android:layout_marginTop="5dp"
+        android:textSize="@dimen/text_size_small"
+        android:textStyle="bold" />
 
 
     <LinearLayout
         android:id="@+id/btn_lay"
         android:layout_width="60dp"
-        android:layout_height="20dp"
+        android:layout_height="25dp"
+        android:layout_alignEnd="@+id/tv_service_charges"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/tv_service_charges"
         android:layout_below="@+id/tv_total"
         android:layout_marginBottom="10dp"
         android:background="@drawable/rounded_corner"
@@ -102,6 +124,7 @@
             android:background="@color/payment_btn_color"
             android:gravity="center"
             android:text="10"
+            android:textColor="@android:color/white"
             android:textSize="12sp" />
 
         <TextView
@@ -118,11 +141,12 @@
     <TextView
         android:id="@+id/tv_close"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/tv_service_tax_value"
-        android:layout_alignStart="@+id/tv_service_tax_value"
-        android:layout_alignTop="@+id/btn_lay"
-        android:gravity="center"
+        android:layout_height="25dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/tv_total"
+        android:gravity="center|bottom"
+        android:layout_marginRight="10dp"
         android:text="X"
         android:textColor="@color/colorAccent" />
 
@@ -133,7 +157,8 @@
         android:layout_above="@+id/tv_vat_value"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:text="$ 1.6" />
+        android:text="$ 1.6"
+        android:textSize="12sp"/>
 
     <TextView
         android:id="@+id/tv_service_tax_value"
@@ -142,6 +167,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/tv_vat_value"
-        android:text="$ 6.0" />
+        android:text="$ 6.0"
+        android:textSize="12sp"/>
 
 </RelativeLayout>
