--- a/app/src/main/res/layout/tax_items.xml
+++ b/app/src/main/res/layout/tax_items.xml
@@ -4,21 +4,24 @@
     android:layout_height="match_parent">
     <TextView
         android:layout_width="0dp"
-        android:layout_height="30dp"
-        android:textSize="13sp"
-        android:gravity="end"
-        android:id="@+id/tv_tax_name"
-        android:textAlignment="viewEnd"
-        android:textColor="@color/fontColor"
-        android:layout_weight="1.3" />
+        android:layout_height="wrap_content"
+        android:layout_weight=".8" />
     <TextView
         android:layout_width="0dp"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
+        android:textSize="13sp"
+        android:padding="5dp"
+        android:id="@+id/tv_tax_name"
+        android:textColor="@color/fontColor"
+        android:layout_weight=".7" />
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:textSize="13sp"
         android:gravity="right"
-        android:id="@+id/tv_tax_money"
         android:padding="5dp"
+        android:id="@+id/tv_tax_money"
         android:textAlignment="viewEnd"
-        android:layout_weight=".7"
+        android:layout_weight=".5"
         android:textColor="@color/fontColor" />
 </LinearLayout>
