--- a/app/src/main/res/layout/content_menu.xml
+++ b/app/src/main/res/layout/content_menu.xml
@@ -29,6 +29,7 @@
     android:layout_height="match_parent"
     android:layout_weight="1"
     android:groupIndicator="@null"
+    android:focusable="true"
    >
 
 </ExpandableListView>
