5-5-2017(Dume Menu Code)

--- a/app/src/main/res/layout/bill_detail.xml
+++ b/app/src/main/res/layout/bill_detail.xml
@@ -68,7 +68,7 @@
             android:layout_alignParentStart="true" />
 
         <TextView
-            android:id="@+id/tv_bill_details"
+            android:id="@+id/tv_bill_date"
             android:layout_width="250dp"
             android:gravity="center|start"
             android:layout_height="wrap_content"
@@ -87,9 +87,9 @@
             android:layout_alignParentRight="true"
             android:text=": 5596"
             android:gravity="center|start"
-            android:layout_below="@+id/tv_bill_details"
-            android:layout_alignLeft="@+id/tv_bill_details"
-            android:layout_alignStart="@+id/tv_bill_details" />
+            android:layout_below="@+id/tv_bill_date"
+            android:layout_alignLeft="@+id/tv_bill_date"
+            android:layout_alignStart="@+id/tv_bill_date" />
 
         <TextView
             android:id="@+id/tv_order_id"
