--- a/app/src/main/res/layout/content_menu.xml
+++ b/app/src/main/res/layout/content_menu.xml
@@ -21,6 +21,7 @@
         android:padding="5dp"
       android:textAlignment="center"
         android:text="@string/dinner"
+        android:layout_margin="10dp"
         android:textSize="24sp" />
 
 <ExpandableListView
