--- a/app/src/main/res/layout/summery_list_item.xml
+++ b/app/src/main/res/layout/summery_list_item.xml
@@ -69,6 +69,7 @@
         android:layout_alignParentRight="true"
         android:layout_below="@+id/tv_service_charges"
         android:text="$ 3.6"
+        android:gravity="right"
         android:textSize="12sp"
         android:layout_alignLeft="@+id/tv_service_charges_value"
         android:layout_alignStart="@+id/tv_service_charges_value" />
@@ -152,13 +153,14 @@
 
     <TextView
         android:id="@+id/tv_service_charges_value"
-        android:layout_width="wrap_content"
+        android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:layout_above="@+id/tv_vat_value"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:text="$ 1.6"
-        android:textSize="12sp"/>
+        android:gravity="right"
+        android:textSize="12sp" />
 
     <TextView
         android:id="@+id/tv_service_tax_value"
@@ -168,6 +170,9 @@
         android:layout_alignParentRight="true"
         android:layout_below="@+id/tv_vat_value"
         android:text="$ 6.0"
-        android:textSize="12sp"/>
+        android:gravity="right"
+        android:textSize="12sp"
+        android:layout_alignLeft="@+id/tv_vat_value"
+        android:layout_alignStart="@+id/tv_vat_value" />
 
 </RelativeLayout>
