--- a/app/src/main/res/layout/menu_list_item.xml
+++ b/app/src/main/res/layout/menu_list_item.xml
@@ -34,59 +34,60 @@
 
     <LinearLayout
         android:id="@+id/btn_lay"
-        android:layout_width="60dp"
-        android:layout_height="20dp"
+        android:layout_width="70dp"
+        android:layout_height="40dp"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/tv_price"
         android:layout_marginTop="10dp"
-       android:layout_alignParentRight="true"
-        android:orientation="horizontal"
         android:background="@drawable/rounded_corner"
-        android:layout_below="@+id/tv_price">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tv_minus"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:textColor="@color/secondHeader"
             android:gravity="center"
+            android:text="-"
+            android:textColor="@color/secondHeader"
             android:textSize="12sp"
-            android:textStyle="bold"
-            android:text="-" />
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_qutity"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center"
-            android:textSize="12sp"
-            android:textColor="@color/white"
             android:background="@color/payment_btn_color"
-            android:text="0" />
+            android:gravity="center"
+            android:text="0"
+            android:textColor="@color/white"
+            android:textSize="12sp" />
+
         <TextView
             android:id="@+id/tv_plus"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:textSize="12sp"
-            android:textStyle="bold"
+            android:text="+"
             android:textColor="@color/secondHeader"
-            android:text="+" />
+            android:textSize="12sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <TextView
-        android:layout_width="60dp"
-        android:layout_height="20dp"
-        android:background="@drawable/rounded_corner"
-        android:gravity="center"
-        android:textAlignment="center"
-        android:text="Add"
-        android:layout_marginTop="10dp"
         android:id="@+id/tv_add_item"
-        android:textColor="@color/secondHeader"
+        android:layout_width="60dp"
+        android:layout_height="40dp"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/tv_price"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/rounded_corner"
+        android:gravity="center"
+        android:text="Add"
+        android:textAlignment="center"
+        android:textColor="@color/secondHeader"
         android:textStyle="bold"
 
         />
