--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context="com.effone.hostismeandroid.activity.MenuActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/linearLayoutlin"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
@@ -20,7 +22,10 @@
 
     </android.support.design.widget.AppBarLayout>
 
-  <include layout="@layout/content_menu"
-      tools:ignore="ResourceCycle" />
+  <include layout="@layout/main_his_menu"
+      tools:ignore="ResourceCycle"
+      android:layout_below="@+id/linearLayoutlin"
+      android:layout_height="match_parent"
+      android:layout_width="match_parent"/>
 
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
