--- a/app/src/main/res/layout/content_menu.xml
+++ b/app/src/main/res/layout/content_menu.xml
@@ -7,8 +7,7 @@
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.effone.hostismeandroid.activity.MenuActivity"
-    tools:showIn="@layout/activity_menu"
-   >
+    tools:showIn="@layout/activity_menu">
 
 
     <TextView
@@ -19,25 +18,24 @@
         android:layout_centerHorizontal="true"
         android:gravity="center"
         android:padding="5dp"
-      android:textAlignment="center"
         android:text="@string/dinner"
-        android:layout_margin="10dp"
+        android:textAlignment="center"
         android:textSize="24sp" />
 
-<ExpandableListView
-    android:id="@+id/elv_menu"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_weight="1"
-    android:groupIndicator="@null"
-    android:focusable="true"
-   >
+    <ExpandableListView
+        android:id="@+id/elv_menu"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:focusable="true"
+        android:groupIndicator="@null">
 
-</ExpandableListView>
+    </ExpandableListView>
+
     <LinearLayout
+        android:id="@+id/btn_lay"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:id="@+id/btn_lay"
         android:orientation="horizontal">
 
         <TextView
@@ -46,13 +44,13 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/dinner"
-            android:text="20 Items in Cart\n$ 200.00\nPlus charges"
-            android:textColor="@android:color/white"
             android:drawableLeft="@drawable/cart"
             android:drawablePadding="5dp"
+            android:drawableTint="@android:color/white"
             android:paddingLeft="5dp"
             android:paddingTop="5dp"
-            android:drawableTint="@android:color/white"
+            android:text="20 Items in Cart\n$ 200.00\nPlus charges"
+            android:textColor="@android:color/white"
             android:textSize="11dp" />
 
         <TextView
