--- a/app/src/main/res/layout/content_menu.xml
+++ b/app/src/main/res/layout/content_menu.xml
@@ -1,41 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.effone.hostismeandroid.activity.MenuActivity"
-    tools:showIn="@layout/activity_menu">
-
-
-    <TextView
-        android:id="@+id/tv_menu_heading"
+    tools:context="com.effone.viewpageholder.MainActivity">
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbAR"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:gravity="center"
-        android:padding="5dp"
-        android:text="@string/dinner"
-        android:textAlignment="center"
-        android:textSize="24sp" />
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-    <ExpandableListView
-        android:id="@+id/elv_menu"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_gravity="center_horizontal"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vp_main_menu"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:focusable="true"
-        android:groupIndicator="@null">
-
-    </ExpandableListView>
+        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="50dp"
+        android:layout_below="@+id/appbAR"
+        android:layout_alignParentEnd="true">
+    </android.support.v4.view.ViewPager>
 
     <LinearLayout
         android:id="@+id/btn_lay"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_alignBottom="@+id/vp_main_menu"
+        android:layout_alignParentBottom="true"
         android:orientation="horizontal">
 
         <TextView
@@ -60,9 +62,10 @@
             android:layout_weight="1"
             android:background="@color/confirm"
             android:gravity="center"
-            android:text="View Cart"
+            android:text="View Order"
             android:textAlignment="center"
             android:textColor="@android:color/white"
             android:textSize="24sp" />
     </LinearLayout>
-</LinearLayout>
+
+</RelativeLayout>
