--- a/app/src/main/res/layout/fragment_menu_view.xml
+++ b/app/src/main/res/layout/fragment_menu_view.xml
@@ -1,13 +1,56 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.effone.hostismeandroid.fragment.MenuViewFragment">
+    android:orientation="vertical">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/img_left_hand"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:lines="1"
+            android:textSize="8sp"
+            android:gravity="center"
+            android:padding="0dp"
+            android:drawableLeft="@drawable/ic_chevron_left_black_24dp" />
+
+        <TextView
+            android:id="@+id/tv_menu_heading"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:padding="5dp"
+            android:textAlignment="center"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/img_right_hand"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:lines="1"
+            android:textSize="8sp"
+            android:gravity="center"
+            android:padding="0dp"
+            android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp" />
+    </LinearLayout>
+
+    <ExpandableListView
+        android:id="@+id/elv_menu"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_weight="1"
+        android:focusable="true"
+        android:groupIndicator="@null">
 
-</FrameLayout>
+    </ExpandableListView>
+
+</LinearLayout>
