--- a/app/src/main/res/layout/menu_list_item.xml
+++ b/app/src/main/res/layout/menu_list_item.xml
@@ -30,7 +30,8 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/tv_dish_name"
         android:text="Virgin Olive Oil | Aged balsamic Vinger"
-        android:textSize="14sp" />
+        android:textSize="14sp"
+        android:layout_toStartOf="@+id/btn_lay" />
 
     <LinearLayout
         android:id="@+id/btn_lay"
